# GasGuard

./: .eslintrc.js  PR_DESCRIPTION.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  gasguard-scan.yml  gasguard.yml
apps/api/: Cargo.toml  package.json
apps/api/src/: server.ts
apps/api/src/controllers/: cross-chain-gas.controller.ts  failed-transaction.controller.ts
apps/api/src/services/: cross-chain-gas.service.ts
config/: gasguard.config.json
libs/engine/analyzers/: solidity-analyzer.ts
rules/optimization/errors/: detect-missing-custom-errors.ts
rules/optimization/storage/: detect-missing-immutable.ts
rules/security/storage-layout/: detect-storage-slot-collisions.ts
rules/stellar/access-control/: detect-missing-access-control.ts
rules/stellar/cross-contract/: detect-unsafe-cross-contract-invocation.ts
rules/stellar/events/: detect-excessive-event-topics.ts
rules/stellar/optimization/: detect-inefficient-symbol-usage.ts
rules/stellar/upgradeability/: detect-missing-upgrade-guards.ts
src/analysis/scoring/: project-risk-scorer.spec.ts  project-risk-scorer.ts
src/config/: config.types.ts
src/patterns/stellar/: contract-pattern-library.spec.ts  contract-pattern-library.ts  index.ts  types.ts
src/pipeline/stellar/: index.ts  soroban-pipeline.ts  types.ts
src/recommendation/: rule-recommendation.ts
src/reporting/: mod.rs
src/reporting/sarif/: mod.rs  (+3 more)
tests/rules/: detect-excessive-event-topics.spec.ts  detect-inconsistent-visibility.spec.ts  detect-unsafe-operations.spec.ts  solidity-rules.spec.ts
(+60 files in other folders)
