[package]
name = "gasguard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
gasguard-engine = { path = "../../libs/engine" }
gasguard-cli = { path = "../../packages/cli" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
serde_json = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
gasguard-auto-fix = { path = "../../libs/auto-fix" }
gasguard-plugin-system = { path = "../../libs/plugin-system" }

[[bin]]
name = "gasguard"
path = "src/main.rs"
